--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ username: Lee chaelim
 user_description: 굴렁굴렁 굴렁쇠 깍고 깎아 잘 굴러가는 그날까지
 user_title: Back-End Developer
 email: chaelim3396@gmail.com
+instagram_username: chelee._.cherry
 linkedin_username: 이채림
 github_username: chech2
 
