Fix: 프로필 이미지명 수정

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
   # twitter: # twitter username
   # facebook: 95kes # facebook username
   email: chaelim3396@gmail.com # email adress
-  avatar: /assets/img/나.png # change with your own avatar
+  avatar: /assets/img/profileimg.jpeg # change with your own avatar
 
 # URL settings
 url: "chech2.github.io" #
